--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   "author": "manas",
   "license": "ISC",
   "dependencies": {
+    "app": "^0.1.0",
+    "cors": "^2.8.5",
+    "express": "^4.21.1",
     "nodemon": "^2.0.7",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "ws": "^8.18.0"
   }
 }
